fixed leaderboard ranking on small mobile size

--- a/src/app/leaderboard/index.css
+++ b/src/app/leaderboard/index.css
@@ -1,4 +1,14 @@
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 385px) {
+  .rank-div {
+    width: 100px;
+    
+  }
+  .rank-div .rank-div-name {
+    font-size:11px !important;
+  }
+}
+
+/* @media screen and (max-width: 640px) {
   table {
     font-size: 14px !important;
     border-radius: 10px !important;
@@ -26,4 +36,4 @@
     padding-left: 10px !important;
     padding-right: 10px !important;
   }
-}
+} */
